--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/http": "^0.6.4",
+    "@pinia/nuxt": "^0.7.0",
     "chart.js": "^4.4.6",
+    "cookie-universal": "^2.2.2",
     "datatables.net": "^2.1.8",
     "datatables.net-dt": "^2.1.8",
     "jquery": "^3.7.1",
     "materialize-css": "^1.0.0-rc.2",
     "nuxt": "^3.14.159",
+    "pinia": "^2.2.6",
     "vue": "latest",
     "vue-chartkick": "^1.1.0",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vuex": "^4.1.0"
   }
 }
